# graph-neural-networks-for-molecules

./: .gitignore  README.md  RESULTS.md  pyproject.toml
configs/: ablation_depth.yaml  fingerprint.yaml  gcn.yaml  mpnn.yaml
data/: README.md  esol_sample.csv
notebooks/: demo.ipynb
results/: metrics.json  mpnn.pt  training_log_mpnn.json
scripts/: benchmark.py  download_data.py  run_all.py
src/gnn_molecules/: __init__.py  config.py  data.py  experiment.py  featurize.py  layers.py  models.py  train.py
tests/: test_config_and_experiment.py  test_data_and_models.py  test_featurize.py  test_layers.py
