[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-molecules"
version = "0.1.0"
description = "From-scratch message passing neural networks for molecular property prediction"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
keywords = ["graph-neural-networks", "message-passing", "cheminformatics", "rdkit", "pytorch"]
dependencies = [
    "torch>=2.0",
    "rdkit>=2023.3",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "black>=23.0"]

[project.urls]
Repository = "https://github.com/aamirmalik-dr/graph-neural-networks-for-molecules"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
